--- a/BurnDown/Web.config
+++ b/BurnDown/Web.config
@@ -59,10 +59,12 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+      <customErrors mode="Off"></customErrors>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
+      <httpErrors errorMode="Detailed"></httpErrors>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
